[package]
name = "belly"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/belly_cli",
    "crates/belly_core",
    "crates/belly_macro",
    "crates/belly_widgets",
    "crates/bevy_stylebox",
    "crates/tagstr",
]

[dependencies]
bevy = "0.11"
embed-doc-image = "0.1"
tagstr = { path = "crates/tagstr" }
belly_macro = { path = "crates/belly_macro" }
belly_core = { path = "crates/belly_core" }
belly_widgets = { path = "crates/belly_widgets" }

bevy-inspector-egui = "0.19.0"


[[example]]
name = "text_input"
path = "examples/text-input.rs"

[[example]]
name = "stylebox-panel"
path = "examples/stylebox-panel.rs"
required-features = ["bevy/basis-universal"]

[[example]]
name = "todo"
path = "examples/todo.rs"


