[package]
name = "belly"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/belly_cli",
    "crates/belly_core",
    "crates/belly_macro",
    "crates/belly_widgets",
    "crates/bevy_stylebox",
    "crates/tagstr",
]

[dependencies]
bevy = "0.12"
embed-doc-image = "0.1"
tagstr = { path = "crates/tagstr" }
belly_macro = { path = "crates/belly_macro" }
belly_core = { path = "crates/belly_core" }
belly_widgets = { path = "crates/belly_widgets" }

[[example]]
name = "text_input"
path = "examples/text-input.rs"

[[example]]
name = "stylebox-panel"
path = "examples/stylebox-panel.rs"
required-features = ["bevy/basis-universal"]
