[package]
name = "bevy_elements_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
bevy-inspector-egui = "0.13.0"
cssparser = "0.29.6"
lazy_static = "1.4.0"
smallvec = "1.10.0"
tagstr = { path = "../tagstr" }
tagstr_core = { path = "../tagstr_core" }
