[package]
name = "bevy_elements_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
quote = "1.0.21"
syn-rsx = "0.9.0"
bevy_elements_core = { path = "../bevy_elements_core" }
proc-macro2 = "1.0.47"
procout = "0.1.13"
syn = "1.0.103"
