[package]
name = "belly_cli"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustdoc-types = "0.20.0"
rustdoc-json = "0.8"
serde_json = "1.0"
clap = { "version" = "4.1", features = ["derive"] }

[[bin]]
name = "belly"
path = "src/main.rs"