[package]
name = "belly_core"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
bevy_stylebox = { path = "../bevy_stylebox" }
cssparser = "0.29.6"
itertools = "0.10.5"
lazy_static = "1.4.0"
roxmltree = "0.16.0"
smallvec = "1.10.0"
tagstr = { path = "../tagstr" }
