[package]
name = "belly_core"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bevy = { workspace = true }
bevy_stylebox = { workspace = true }
cssparser = "0.29.6"
itertools = { workspace = true }
lazy_static = "1.4.0"
roxmltree = "0.16.0"
smallvec = "1.10.0"
thiserror = "1.0.50"
tagstr = { workspace = true }
