[package]
name = "belly_macro"
version = "0.4.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
quote = "1.0.21"
syn-rsx = { git = "https://github.com/stoically/syn-rsx.git" }
# syn-rsx = { git = "https://github.com/jkb0o/syn-rsx.git", branch = "add_syn_printing_feature" }
proc-macro2 = { version="1.0.50", features = ["span-locations"] }
procout = "0.1.13"
syn = "1.0.107"
toml = "0.5.10"
# syn = { version = "1.0.105", features = ["full", "parsing", "printing", "extra-traits"] }
