[package]
name = "belly_widgets"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
belly_core = { workspace = true }
belly_macro = { workspace = true }
tagstr = { workspace = true }
itertools = { workspace = true }
ab_glyph = "0.2.18"
